--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -8,7 +8,7 @@
 <body>
   <h1>Connexion</h1>
   <form id="login-form">
-    <input type="email" id="email" placeholder="Email" required>
+    <input type="test" id="username" placeholder="username" required>
     <input type="password" id="password" placeholder="Mot de passe" required>
     <button type="submit">Se connecter</button>
   </form>
