--- a/index.html
+++ b/index.html
@@ -9,9 +9,15 @@
   <h1>Accueil - Tous les produits</h1>
   <button onclick="location.href='/src/pages/login.html'">Se connecter</button>
   <button onclick="location.href='/src/pages/register.html'">S'inscrire</button>
-  <button onclick="alert('Tous les produits')">Afficher tous les produits</button>
-  <button onclick="alert('Un seul produit')">Afficher un seul produit</button>
-  <button onclick="alert('Rechercher')">Rechercher des produits</button>
+  <button onclick="location.href='/src/pages/dashboard.html'">
+  Afficher tous les produits
+  </button>
+  <button onclick="location.href='/src/pages/product.html'">
+  Afficher un seul produit
+  </button>
+  <button onclick="location.href='/src/pages/add-product.html'">
+  Ajouter un produit
+  </button>
   <button onclick="alert('Ajout au panier')">Ajouter un produit au panier</button>
   <button onclick="location.href='/src/pages/stats.html'">Accéder à l'URL de statistiques</button>
   <div id="product-list"></div>
