--- a/src/pages/dashboard.html
+++ b/src/pages/dashboard.html
@@ -8,6 +8,8 @@
 <body>
   <h1>Dashboard</h1>
   <button id="logout-btn">Se déconnecter</button>
-  <script type="module" src="/src/js/auth.js"></script>
+
+  <div id="product-list"></div>
+  <script type="module" src="/src/js/dashboard.js"></script>
 </body>
 </html>
