--- a/index.html
+++ b/index.html
@@ -1,26 +1,37 @@
 <html lang="fr">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Accueil - Produits</title>
-  <link rel="stylesheet" href="/src/style/main.css">
 </head>
+
 <body>
-  <h1>Accueil - Tous les produits</h1>
-  <button onclick="location.href='/src/pages/login.html'">Se connecter</button>
-  <button onclick="location.href='/src/pages/register.html'">S'inscrire</button>
-  <button onclick="location.href='/src/pages/dashboard.html'">
-  Afficher tous les produits
-  </button>
-  <button onclick="location.href='/src/pages/product.html'">
-  Afficher un seul produit
-  </button>
-  <button onclick="location.href='/src/pages/add-product.html'">
-  Ajouter un produit
-  </button>
-  <button onclick="alert('Ajout au panier')">Ajouter un produit au panier</button>
-  <button onclick="location.href='/src/pages/stats.html'">Accéder à l'URL de statistiques</button>
-  <div id="product-list"></div>
+  <section class="flex flex-1 column ai-center">
+    <div>
+      <h1>Accueil - Tous les produits</h1>
+    </div>
+
+    <div class="flex gap-4 ai-center">
+      <button onclick="location.href='/src/pages/login.html'">Se connecter</button>
+      <button onclick="location.href='/src/pages/register.html'">S'inscrire</button>
+      <button onclick="location.href='/src/pages/dashboard.html'">
+        Afficher tous les produits
+      </button>
+      <button onclick="location.href='/src/pages/product.html'">
+        Afficher un seul produit
+      </button>
+      <button onclick="location.href='/src/pages/add-product.html'">
+        Ajouter un produit
+      </button>
+
+      <button onclick="alert('Ajout au panier')">Ajouter un produit au panier</button>
+      <button onclick="location.href='/src/pages/stats.html'">Accéder à l'URL de statistiques</button>
+      <div id="product-list"></div>
+    </div>
+  </section>
+
   <script type="module" src="/src/main.js"></script>
 </body>
+
 </html>
