--- a/src/pages/product.html
+++ b/src/pages/product.html
@@ -1,18 +1,25 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
   <meta charset="UTF-8">
   <title>Détail Produit</title>
-  <link rel="stylesheet" href="/src/style/main.css">
+  <link rel="stylesheet" href="../style.css" />
 </head>
+
 <body>
-  <h1>Afficher un Produit</h1>
+  <section class="flex column flex-1 ai-center gap-8">
+    <div>
+      <h1>Afficher un Produit</h1>
+    </div>
 
-  <input type="number" id="product-id" placeholder="Entrez un ID de produit" />
-<button id="fetch-product-btn">Afficher</button>
-<div id="product-detail"></div>
+    <input type="number" id="product-id" placeholder="Entrez un ID de produit" />
+    <button id="fetch-product-btn">Afficher</button>
+    <div id="product-detail"></div>
+  </section>
 
-<script type="module" src="/src/js/product.js"></script>
+  <script type="module" src="/src/js/product.js"></script>
 
 </body>
+
 </html>
