--- a/src/pages/csp-errors.html
+++ b/src/pages/csp-errors.html
@@ -3,7 +3,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Erreurs CSP</title>
-  <link rel="stylesheet" href="/src/style/main.css">
+  <link rel="stylesheet" href="../style.css">
 </head>
 <body>
   <h1>Logs CSP</h1>
