Liste produits + auth verif

--- a/src/pages/add-product.html
+++ b/src/pages/add-product.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Ajouter un Produit</title>
-  <link rel="stylesheet" href="/src/style/main.css" />
+  <link rel="stylesheet" href="/src/style.css" />
 </head>
 <body>
   <h1>Ajouter un Produit</h1>
