--- a/src/pages/dashboard.html
+++ b/src/pages/dashboard.html
@@ -3,12 +3,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dashboard</title>
-  <link rel="stylesheet" href="/src/style/main.css">
+  <link rel="stylesheet" href="/src/style.css">
 </head>
 <body>
   <h1>Dashboard</h1>
-  <button id="logout-btn">Se déconnecter</button>
-
+  <button onclick="location.href='/src/pages/index.html'">
+    Deconnecter
+  </button>
   <div id="product-list"></div>
   <script type="module" src="/src/js/dashboard.js"></script>
 </body>
