--- a/src/pages/product.html
+++ b/src/pages/product.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
   <meta charset="UTF-8">
   <title>Détail Produit</title>
-  <link rel="stylesheet" href="/src/style/main.css">
+  <link rel="stylesheet" href="/src/style.css">
 </head>
+
 <body>
   <h1>Afficher un Produit</h1>
 
   <input type="number" id="product-id" placeholder="Entrez un ID de produit" />
-<button id="fetch-product-btn">Afficher</button>
-<div id="product-detail"></div>
+  <button id="fetch-product-btn">Afficher</button>
+  <div id="product-detail"></div>
 
-<script type="module" src="/src/js/product.js"></script>
+  <script type="module" src="/src/js/product.js"></script>
 
 </body>
+
 </html>
