--- a/src/pages/register.html
+++ b/src/pages/register.html
@@ -3,7 +3,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Inscription</title>
-  <link rel="stylesheet" href="/src/style/main.css">
+  <link rel="stylesheet" href="/src/style.css">
 </head>
 <body>
   <h1>Inscription</h1>
