Affichage des stats

--- a/src/pages/stats.html
+++ b/src/pages/stats.html
@@ -6,8 +6,8 @@
   <link rel="stylesheet" href="/src/style.css">
 </head>
 <body>
-  <h1>Statistiques</h1>
-  <div id="stats"></div>
-  <script type="module" src="/src/js/stats.js"></script>
+ <div id="stats" style="text-align: center; max-width: 800px; margin: 0 auto;"></div>
+  <script type="module" src="/src/js/stat.js"></script>
+  <script type="module" src="/src/js/page-protection.js"></script>
 </body>
 </html>
