deconnection + utilisateur authentifie

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <h1>Accueil - Tous les produits</h1>
   <button onclick="location.href='/src/pages/login.html'">Se connecter</button>
   <button onclick="location.href='/src/pages/register.html'">S'inscrire</button>
+  <button onclick="logoutUser()">Se déconnecter</button>
   <button onclick="location.href='/src/pages/dashboard.html'">
   Afficher tous les produits
   </button>
@@ -22,5 +23,6 @@
   <button onclick="location.href='/src/pages/stats.html'">Accéder à l'URL de statistiques</button>
   <div id="product-list"></div>
   <script type="module" src="/src/main.js"></script>
+  <script type="module" src="/src/js/auth.js"></script>
 </body>
 </html>
