--- a/src/pages/add-product.html
+++ b/src/pages/add-product.html
@@ -25,5 +25,7 @@
   <div id="result"></div>
 
   <script type="module" src="/src/js/add-product.js"></script>
+  <script type="module" src="/src/js/page-protection.js"></script>
+  
 </body>
 </html>
