--- a/src/pages/dashboard.html
+++ b/src/pages/dashboard.html
@@ -12,5 +12,7 @@
   </button>
   <div id="product-list"></div>
   <script type="module" src="/src/js/dashboard.js"></script>
+  <script type="module" src="/src/js/page-protection.js"></script>
+  <script></script>
 </body>
 </html>
