--- a/src/pages/edit-product.html
+++ b/src/pages/edit-product.html
@@ -11,5 +11,6 @@
     
   </form>
   <script type="module" src="/src/js/products.js"></script>
+  <script type="module" src="/src/js/page-protection.js"></script>
 </body>
 </html>
