--- a/src/pages/product.html
+++ b/src/pages/product.html
@@ -14,7 +14,8 @@
   <button id="fetch-product-btn">Afficher</button>
   <div id="product-detail"></div>
 
-  <script type="module" src="/src/js/product.js"></script>
+<script type="module" src="/src/js/product.js"></script>
+<script type="module" src="/src/js/page-protection.js"></script>
 
 </body>
 
