--- a/src/pages/product.html
+++ b/src/pages/product.html
@@ -13,6 +13,7 @@
   <input type="number" id="product-id" placeholder="Entrez un ID de produit" />
   <button id="fetch-product-btn">Afficher</button>
   <div id="product-detail"></div>
+  <button onclick="location.href='/index.html'">Retour à l'accueil</button>
 
   <script type="module" src="/src/js/product.js"></script>
 
