--- a/src/pages/add-product.html
+++ b/src/pages/add-product.html
@@ -2,27 +2,32 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
-  <title>Ajouter un Produit</title>
-  <link rel="stylesheet" href="/src/style.css" />
+  <title>Ajouter un produit</title>
+  <link rel="stylesheet" href="/src/style.css">
 </head>
 <body>
-  <h1>Ajouter un Produit</h1>
-
+  <h1>Ajouter un produit</h1>
+  <button onclick="location.href='/index.html'">Retour à l'accueil</button>
   <form id="product-form" enctype="multipart/form-data">
-    <input type="text" name="label" placeholder="Nom du produit" required />
-    <input type="text" name="description" placeholder="Description" />
-    <input type="number" name="price" placeholder="Prix (€)" step="0.01" required />
+    <label for="label">Nom du produit :</label>
+    <input type="text" id="label" name="label" required /><br />
 
-    <select name="category" id="category-select" required>
-      <option value="">-- Choisir une catégorie --</option>
-    </select>
+    <label for="description">Description :</label>
+    <textarea id="description" name="description" required></textarea><br />
 
-    <input type="file" name="images" accept="image/*" multiple required />
+    <label for="price">Prix :</label>
+    <input type="number" id="price" name="price" step="0.01" required /><br />
+
+    <label for="category-select">Catégorie :</label>
+    <select id="category-select" name="category" required></select><br />
+
+    <label for="images">Image :</label>
+    <input type="file" name="images" id="images" accept="image/*" required /><br /><br />
 
     <button type="submit">Ajouter</button>
   </form>
 
-  <div id="result"></div>
+  <div id="result" style="margin-top: 20px;"></div>
 
   <script type="module" src="/src/js/add-product.js"></script>
 </body>
