--- a/src/pages/dashboard.html
+++ b/src/pages/dashboard.html
@@ -1,16 +1,71 @@
+<!DOCTYPE html>
 <html lang="fr">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
   <title>Dashboard</title>
-  <link rel="stylesheet" href="/src/style.css">
+  <link rel="stylesheet" href="/src/style.css" />
 </head>
+
 <body>
-  <h1>Dashboard</h1>
-  <button onclick="location.href='/src/pages/index.html'">
-    Deconnecter
-  </button>
-  <div id="product-list"></div>
-  <script type="module" src="/src/js/dashboard.js"></script>
+  <h1>Tableau de bord</h1>
+  <div id="menu"></div>
+  <div id="message" style="margin-top: 20px;"></div>
+
+  <script type="module">
+    const menu = document.getElementById("menu");
+    const message = document.getElementById("message");
+    
+    async function isAuthenticated() {
+      const token = localStorage.getItem("access_token");
+      if (!token) return false;
+
+      try {
+        const res = await fetch("http://localhost:5000/authentication/me", {
+          headers: {
+            Authorization: `Bearer ${token}`
+          },
+          credentials: 'include'
+        });
+
+        if (!res.ok) return false;
+        const data = await res.json();
+        return !!data?.name;
+      } catch {
+        return false;
+      }
+    }
+
+    isAuthenticated().then(auth => {
+      if (!auth) {
+        alert("Vous devez être connecté.");
+        window.location.href = "/index.html";
+      } else {
+        menu.innerHTML = `
+          <button onclick="location.href='/src/pages/add-product.html'">Ajouter produit</button>
+          <button onclick="location.href='/src/pages/edit-product.html'">Modifier produit</button>
+          <button onclick="location.href='/src/pages/delete-product.html'">Supprimer produit</button>
+          <button onclick="logout()">Se déconnecter</button>
+        `;
+        message.innerHTML = "<p>Bienvenue sur votre tableau de bord.</p>";
+      }
+    });
+
+
+    window.logout = async function () {
+      localStorage.removeItem("access_token");
+      try {
+        await fetch("http://localhost:5000/authentication/logout", {
+          method: "POST",
+          credentials: "include"
+        });
+      } catch (err) {
+        console.warn("Erreur de déconnexion :", err);
+      }
+      location.href = "/index.html";
+    };
+
+  </script>
 </body>
+
 </html>
