--- a/src/pages/add-product.html
+++ b/src/pages/add-product.html
@@ -1,34 +1,41 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
   <meta charset="UTF-8" />
   <title>Ajouter un produit</title>
-  <link rel="stylesheet" href="/src/style.css">
+  <link rel="stylesheet" href="../style.css">
 </head>
+
 <body>
-  <h1>Ajouter un produit</h1>
-  <button onclick="location.href='/index.html'">Retour à l'accueil</button>
-  <form id="product-form" enctype="multipart/form-data">
-    <label for="label">Nom du produit :</label>
-    <input type="text" id="label" name="label" required /><br />
+  <section class="flex flex-1 column ai-center">
+    <div class="flex gap-8">
+      <button onclick="location.href='/index.html'">Retour à l'accueil</button>
+      <h1>Ajouter un produit</h1>
+    </div>
 
-    <label for="description">Description :</label>
-    <textarea id="description" name="description" required></textarea><br />
+    <form id="product-form" enctype="multipart/form-data" class="flex column gap-4">
+      <label for="label">Nom du produit :</label>
+      <input type="text" id="label" name="label" required /><br />
 
-    <label for="price">Prix :</label>
-    <input type="number" id="price" name="price" step="0.01" required /><br />
+      <label for="description">Description :</label>
+      <textarea id="description" name="description" required></textarea><br />
 
-    <label for="category-select">Catégorie :</label>
-    <select id="category-select" name="category" required></select><br />
+      <label for="price">Prix :</label>
+      <input type="number" id="price" name="price" step="0.01" required /><br />
 
-    <label for="images">Image :</label>
-    <input type="file" name="images" id="images" accept="image/*" required /><br /><br />
+      <label for="category-select">Catégorie :</label>
+      <select id="category-select" name="category" required></select><br />
 
-    <button type="submit">Ajouter</button>
-  </form>
+      <label for="images">Image :</label>
+      <input type="file" multiple name="images" id="images" accept="image/*" required /><br /><br />
 
-  <div id="result" style="margin-top: 20px;"></div>
+      <button type="submit">Ajouter</button>
+      <div id="result" style="margin-top: 20px;"></div>
+    </form>
+  </section>
 
   <script type="module" src="/src/js/add-product.js"></script>
 </body>
+
 </html>
