--- a/src/pages/delete-product.html
+++ b/src/pages/delete-product.html
@@ -1,23 +1,34 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
   <meta charset="UTF-8" />
   <title>Supprimer un produit</title>
-  <link rel="stylesheet" href="/src/style.css" />
+  <link rel="stylesheet" href="../style.css">
 </head>
+
 <body>
-  <h1> Supprimer un produit</h1>
-  <button onclick="location.href='/index.html'">Retour à l'accueil</button>
-  <label for="product-id">ID du produit :</label>
-  <input type="number" id="product-id" required />
-  <button id="load-product">Charger</button>
+  <section class="flex flex-1 column ai-center">
+    <div class="flex gap-4">
+      <button onclick="location.href='/index.html'">Retour à l'accueil</button>
+      <h1> Supprimer un produit</h1>
+    </div>
 
-  <div id="product-details" style="margin-top: 20px;"></div>
+    <div>
+      <label for="product-id">ID du produit :</label>
+      <input type="number" id="product-id" required />
+      <button id="load-product">Charger</button>
 
-  <button id="delete-btn" style="display:none; margin-top: 10px;"> Supprimer ce produit</button>
+      <div id="product-details" style="margin-top: 20px;"></div>
 
-  <div id="result" style="margin-top: 20px; color: red;"></div>
+      <button id="delete-btn" style="display:none; margin-top: 10px;"> Supprimer ce produit</button>
+
+      <div id="result" style="margin-top: 20px; color: red;"></div>
+    </div>
+
+  </section>
 
   <script type="module" src="/src/js/delete-product.js"></script>
 </body>
+
 </html>
